# lunokIoT_esp-idf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/lunokiot/: CMakeLists.txt  Kconfig
components/lunokiot/include/: Debug.hpp  Device.hpp  Driver.hpp  LunokIoT.hpp  Service.hpp  Task.hpp
components/lunokiot/include/ESP32/: Device.hpp  Driver.hpp  Service.hpp  Task.hpp
components/lunokiot/include/ESP32/Device/: ESP32.hpp  M5AtomLite.hpp
components/lunokiot/include/ESP32/Devices/: ESP32.hpp  LilygoTWatch2020v3.hpp  M5AtomLite.hpp  M5StickCPlus.hpp
components/lunokiot/include/ESP32/Driver/: I2C.hpp  NVS.hpp
components/lunokiot/include/ESP32/Drivers/: AXP192.hpp  AXP202.hpp  Button.hpp  Console.hpp  I2C.hpp  LED.hpp  SK6812.hpp  WiFi.hpp
components/lunokiot/include/ESP32/Services/: HTTPService.hpp  NTPService.hpp
components/lunokiot/include/base/: ANSI.hpp  DeviceTemplate.hpp  DriverTemplate.hpp  I2CDatabase.h  I2CDatabase.hpp  ServiceTemplate.hpp  TaskTemplate.hpp
components/lunokiot/src/: LunokIoT.cpp  TaskBaseClass.cpp
components/lunokiot/src/ESP32/: Device.cpp  Driver.cpp  Service.cpp  Task.cpp
components/lunokiot/src/ESP32/Device/: ESP32.cpp  M5AtomLite.cpp
components/lunokiot/src/ESP32/Devices/: ESP32.cpp  LilygoTWatch2020v3.cpp  M5AtomLite.cpp  M5StickCPlus.cpp
components/lunokiot/src/ESP32/Driver/: Console.cpp  I2C.cpp  NVS.cpp  WiFi.cpp
components/lunokiot/src/ESP32/Drivers/: AXP192.cpp  AXP202.cpp  Button.cpp  Console.cpp  I2C.cpp  LED.cpp  NVS.cpp  SK6812.cpp  WiFi.cpp
components/lunokiot/src/ESP32/Service/: NTPService.cpp
components/lunokiot/src/ESP32/Services/: HTTPService.cpp  NTPService.cpp
doc/: ansi-art.utf.ans
main/: CMakeLists.txt  main.cpp
partitions/: esp32-pico-d4.csv
